--- a/Frontend/src/style/Footer.css
+++ b/Frontend/src/style/Footer.css
@@ -3,7 +3,7 @@
   left: 0;
   bottom: 0; 
   width: 100%; 
-  background-color: #333; 
+  background-color: #283f58; 
   color: #fff; 
   padding: 20px;
   text-align: center;
