--- a/Frontend/src/style/Table.css
+++ b/Frontend/src/style/Table.css
@@ -9,7 +9,7 @@
 
 
 #container-default{
-    background-color: #f2f5f9;
+    background-color: #d5d5d5;
     width: 100%;
     padding: 1%;
     margin: 3% auto;
